//
//  DetailViewController.swift
//  swiftLearning
//
//  Created by 陈小贝 on 2022/11/29.
//

import Foundation
import UIKit

class DetailViewController: UIViewController  {
    
    override func viewDidLoad() {
        self.title = "详情页"
        self.view.backgroundColor = .white
    }
}
