...
        controller.router = router
        router.viewController = controller;
        router.dataStore = interactor
    }
    
    func setupUI() {
        self.title = "VIP架构"
        self.view.backgroundColor = .white
        view.addSubview(tableView)
        tableView.snp.makeConstraints { make in
            make.left.equalTo(0)
            make.width.equalToSuperview()
            make.bottom.equalToSuperview()
...
